2002-11-04  Elena Zannoni  <ezannoni@redhat.com>

	* cli/cli-interp.c (cli_interpreter_delete): Delete.
	(_initialize_cli_interp): Remove delete_proc.

	* interps.h (struct gdb_interpreter_procs): Remove delete_proc.
	(interp_delete_ftype): Delete.
	(gdb_delete_interpreter): Remove.

	* interps.c (gdb_delete_interpreter): Remove.
	(gdb_new_interpreter): Don't initialize delete_proc.

2002-11-04  Elena Zannoni  <ezannoni@redhat.com>

	* interps.c (set_interpreter_cmd): Remove.

2002-11-04  Elena Zannoni  <ezannoni@redhat.com>

	* interps.c (interpreter_completer): Initialize alloced.
	(struct gdb_interpreter): Reformat.
	(set_interpreter_cmd): Remove.

2002-11-04  Elena Zannoni  <ezannoni@redhat.com>

	* interps.h (struct gdb_interpreter_procs): Remove do_one_event_proc.
	(interp_do_one_event_ftype): Delete.
	* interps.c (gdb_new_interpreter): Remove setup of do_one_event
	procedure.
	(interpreter_do_one_event): Delete.
	* event-loop.c (start_event_loop): Remove no-op call to
	interpreter_do_one_event.
	* cli/cli-interps.c: (cli_interpreter_do_one_event): Delete.
	
2002-11-04  Elena Zannoni  <ezannoni@redhat.com>

        * Makefile.in (mi-main.o, mi-cmd-break.o, event-loop.o): Update
        dependencies on interps.h.

2002-11-04  Elena Zannoni  <ezannoni@redhat.com>

	* interps.h (GDB_INTERPRETER_MI2): Define.
	(GDB_INTERPRETER_MI0): Remove.

2002-10-01  Keith Seitz  <keiths@redhat.com>

	* interps.c (interpreter_exec_cmd): Remove mention of "mi" in
	error message.
	(list_interpreter_cmd): Removed.

	* cli/cli-interp.c (do_captured_execute_command): New function.
	(safe_execute_command): New function.
	* Makefile.in (cli-interp.c): Depend on top_h.
	* wrapper.c (do_captured_execute_command): Moved to cli/cli-interp.c.
	(gdb_execute_command): Removed.
	* wrapper.h (gdb_execute_command): Removed.

2002-09-04  Keith Seitz  <keiths@redhat.com>

	* thread.c (do_captured_list_thread_ids): Call prune_threads
	and target_find_new_threads.
