@@ -1,5 +1,11 @@
 2002-11-04  Elena Zannoni  <ezannoni@redhat.com>
 
+	* interps.c (list_interpreter_cmd, do_set_interpreter): Remove
+	useless prototypes.
+	Update a few comments, remove gratuitous blank lines.
+
+2002-11-04  Elena Zannoni  <ezannoni@redhat.com>
+
 	* cli/cli-interp.c (cli_interpreter_delete): Delete.
 	(_initialize_cli_interp): Remove delete_proc.
 
